post upload and user specific post fetching and same for campaign is done